- More message editor work

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1483,8 +1483,8 @@ IDD_MESSAGETOOLBOX DIALOGEX 0, 0, 117, 277
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Verbs:",IDC_STATIC1,7,11,49,11
-    LTEXT           "Talkers:",IDC_STATIC2,7,157,55,11
+    LTEXT           "Global verbs:",IDC_STATIC1,7,11,49,11
+    LTEXT           "Global talkers:",IDC_STATIC2,7,157,55,11
     CONTROL         "",IDC_LISTVERBS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,25,103,120
     CONTROL         "",IDC_LISTTALKERS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,170,103,100
     PUSHBUTTON      "Add verb",IDC_BUTTONADDVERB,64,7,46,14
@@ -1507,20 +1507,23 @@ IDD_MESSAGEEDIT DIALOGEX 0, 0, 499, 118
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDITMESSAGE,169,7,323,104,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN
-    COMBOBOX        IDC_COMBONOUN,58,25,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_EDITMESSAGE,169,21,323,90,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN
+    PUSHBUTTON      "Clone",IDC_BUTTONCLONE,58,7,42,14
+    PUSHBUTTON      "Add sequence",IDC_BUTTONADDSEQ,104,7,59,14
     RTEXT           "Noun:",IDC_STATIC3,7,28,42,8
-    COMBOBOX        IDC_COMBOCONDITION,58,57,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Condition:",IDC_STATIC6,7,60,42,8
-    COMBOBOX        IDC_COMBOVERB,58,41,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBONOUN,58,25,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Verb:",IDC_STATIC7,7,44,42,8
+    COMBOBOX        IDC_COMBOVERB,58,41,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Condition:",IDC_STATIC6,7,60,42,8
+    COMBOBOX        IDC_COMBOCONDITION,58,57,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Sequence:",IDC_STATIC8,7,78,42,8
-    COMBOBOX        IDC_COMBOTALKER,58,91,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Talker:",IDC_STATIC9,7,94,42,8
-    CONTROL         "",IDC_SPINSEQ,"msctls_updown32",UDS_ARROWKEYS,148,74,15,14
     EDITTEXT        IDC_EDITSEQ,58,74,85,14,ES_AUTOHSCROLL | ES_NUMBER
-    PUSHBUTTON      "Add sequence",IDC_BUTTONADDSEQ,58,7,105,14
-    PUSHBUTTON      "Clone",IDC_BUTTONCLONE,7,7,42,14
+    CONTROL         "",IDC_SPINSEQ,"msctls_updown32",UDS_SETBUDDYINT | UDS_AUTOBUDDY | UDS_ARROWKEYS,148,74,15,14
+    RTEXT           "Talker:",IDC_STATIC9,7,94,42,8
+    COMBOBOX        IDC_COMBOTALKER,58,91,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Message text:",IDC_STATIC,172,9,47,8
+    PUSHBUTTON      "Commit",IDC_BUTTONCOMMIT,232,7,50,14
+    PUSHBUTTON      "Add new",IDC_BUTTONADDNEW,7,7,42,14
 END
 
 
