- editing support for nouns/verbs/etc

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1521,7 +1521,7 @@ BEGIN
     CONTROL         "",IDC_SPINSEQ,"msctls_updown32",UDS_SETBUDDYINT | UDS_AUTOBUDDY | UDS_ARROWKEYS,148,74,15,14
     RTEXT           "Talker:",IDC_STATIC9,7,94,42,8
     COMBOBOX        IDC_COMBOTALKER,58,91,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Message text:",IDC_STATIC,172,9,47,8
+    LTEXT           "Message text:",IDC_STATIC2,172,9,47,8
     PUSHBUTTON      "Commit",IDC_BUTTONCOMMIT,232,7,50,14
     PUSHBUTTON      "Add new",IDC_BUTTONADDNEW,7,7,42,14
 END
