- support creating new palette - only show appropriate tabs - fix small bug where wrong text was showing in MessageEditorListCtrl - MessageEditorListCtrl trap editing keys - Redo Message edit pane combo boxes so you can type in them (support raw numbers)

--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -234,6 +234,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
     <None Include="Files\Samples\cursors\Text Cursor 2.bin" />
     <None Include="Files\Samples\cursors\Up-Down Arrow.bin" />
     <None Include="Files\Samples\fonts\BriPro.bin" />
+    <None Include="Files\Samples\palettes\DefaultPalette.bin" />
     <None Include="Files\Samples\pics\Black Screen.bin" />
     <None Include="Files\Samples\pics\Bliss.bin" />
     <None Include="Files\Samples\pics\Criss Cross.bin" />
