--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClCompile Include="Src\Resources\ResourceRecency.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\Resources\ResourceTypeList.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Src\Resources\Vocab000.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -660,9 +657,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Resources\ResourceRecency.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\Resources\ResourceTypeList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Resources\Vocab000.h">
@@ -1289,6 +1283,9 @@
     <ClInclude Include="Src\FrameComponents\MessageEditPane.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Util\WindowsUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="SCICompanionLib.def">
@@ -1771,6 +1768,15 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="res\Transparent.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\newmessage.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\message.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\newpalette.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
