- various fixes, working towards template game

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1191,15 +1191,16 @@ IDD_QUICKSCRIPTS DIALOGEX 0, 0, 106, 222
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,93,92,122
-    PUSHBUTTON      "Go to",IDC_GOTOPIC,60,21,38,14
-    CONTROL         "",IDC_STATICPIC,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,20,49,30
-    PUSHBUTTON      "North",IDC_NORTH,7,51,50,10
-    PUSHBUTTON      "East",IDC_EAST,7,61,50,10
-    PUSHBUTTON      "South",IDC_SOUTH,7,71,50,10
-    PUSHBUTTON      "West",IDC_WEST,7,81,50,10
-    PUSHBUTTON      "Views",IDC_BUTTONVIEWS,60,44,39,13
-    LTEXT           "",IDC_STATICSCRIPTNUM,7,7,92,11
+    CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,97,92,118
+    PUSHBUTTON      "Go to",IDC_GOTOPIC,60,24,38,14
+    CONTROL         "",IDC_STATICPIC,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,23,49,30
+    PUSHBUTTON      "North",IDC_NORTH,7,54,50,10
+    PUSHBUTTON      "East",IDC_EAST,7,64,50,10
+    PUSHBUTTON      "South",IDC_SOUTH,7,74,50,10
+    PUSHBUTTON      "West",IDC_WEST,7,84,50,10
+    PUSHBUTTON      "Views",IDC_BUTTONVIEWS,60,47,39,13
+    LTEXT           "",IDC_STATICSCRIPTNUM,7,7,50,11
+    PUSHBUTTON      "Go to",IDC_GOTOMESSAGE,44,2,55,14,BS_RIGHT
 END
 
 IDD_PREVIEWPIC DIALOGEX 0, 0, 177, 339
@@ -1491,12 +1492,13 @@ IDD_MESSAGETOOLBOX DIALOGEX 0, 0, 117, 277
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Global verbs:",IDC_STATIC1,7,11,49,11
+    LTEXT           "Global verbs:",IDC_STATIC1,7,27,49,11
     LTEXT           "Global talkers:",IDC_STATIC2,7,157,55,11
-    CONTROL         "",IDC_LISTVERBS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,25,103,120
+    CONTROL         "",IDC_LISTVERBS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,41,103,104
     CONTROL         "",IDC_LISTTALKERS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,170,103,100
-    PUSHBUTTON      "Add verb",IDC_BUTTONADDVERB,64,7,46,14
+    PUSHBUTTON      "Add verb",IDC_BUTTONADDVERB,64,23,46,14
     PUSHBUTTON      "Add talker",IDC_BUTTONADDTALKER,64,154,47,14
+    PUSHBUTTON      "Script",IDC_GOTOSCRIPT,47,7,63,14,BS_RIGHT
 END
 
 IDD_MESSAGEHELPER DIALOGEX 0, 0, 117, 277
