--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -212,6 +212,7 @@
     <ClCompile Include="Src\Dialogs\ChooseColorDialogVGA.cpp" />
     <ClCompile Include="Src\Dialogs\DecompileDialog.cpp" />
     <ClCompile Include="Src\Dialogs\ExtractAllDialog.cpp" />
+    <ClCompile Include="Src\Dialogs\GradientDialog.cpp" />
     <ClCompile Include="Src\Dialogs\PaletteEditorDialog.cpp" />
     <ClCompile Include="Src\Dialogs\PrepareBitmapBase.cpp" />
     <ClCompile Include="Src\FrameComponents\MessageEditorListCtrl.cpp" />
@@ -250,6 +251,7 @@
     <ClInclude Include="Src\Compile\DecompilerResults.h" />
     <ClInclude Include="Src\cpptoml\cpptoml.h" />
     <ClInclude Include="Src\Dialogs\DecompileDialog.h" />
+    <ClInclude Include="Src\Dialogs\GradientDialog.h" />
     <ClInclude Include="Src\Dialogs\PaletteEditorCommon.h" />
     <ClInclude Include="Src\Dialogs\PaletteEditorDialog.h" />
     <ClInclude Include="Src\FrameComponents\MessageEditorListCtrl.h" />
@@ -699,6 +701,7 @@
     <Image Include="res\draw_replace.ico" />
     <Image Include="res\draw_zoom.ico" />
     <Image Include="res\edit.ico" />
+    <Image Include="res\editpalette.ico" />
     <Image Include="res\edit_cut.ico" />
     <Image Include="res\edit_paste.ico" />
     <Image Include="res\ellipse.ico" />
