- fix bug with reverting palette colors (part 2) - support for exporting palettes - support for export range and import at

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1442,17 +1442,19 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "VGA Palette Editor"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Close",IDCANCEL,236,215,50,14
+    PUSHBUTTON      "Close",IDCANCEL,226,215,60,14
     CONTROL         "",IDC_STATIC1,"Static",SS_OWNERDRAW | SS_NOTIFY,7,7,212,190
-    PUSHBUTTON      "Revert",IDC_BUTTONREVERT,236,196,50,14
+    PUSHBUTTON      "Revert",IDC_BUTTONREVERT,226,198,60,14
     CONTROL         "Used color",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,10,49,10
-    PUSHBUTTON      "&Edit color",IDC_BUTTONEDITCOLOR,236,38,50,14
+    PUSHBUTTON      "&Edit color",IDC_BUTTONEDITCOLOR,226,38,60,14
     EDITTEXT        IDC_EDIT1,7,200,212,29,ES_MULTILINE | ES_READONLY
-    PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,236,177,50,14
-    PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,236,160,50,14
+    PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,226,164,60,14
+    PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,226,130,60,14
     CONTROL         "Fixed",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,23,33,10
-    EDITTEXT        IDC_EDITRANGE,232,73,54,67,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,236,56,50,14
+    EDITTEXT        IDC_EDITRANGE,226,73,60,54,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,226,56,60,14
+    PUSHBUTTON      "Import &at",IDC_BUTTON_LOADAT,226,147,60,14
+    PUSHBUTTON      "Export &range",IDC_BUTTON_SAVERANGE,226,181,60,14
 END
 
 IDD_PALETTE_EDITOR_EMBEDDED DIALOGEX 0, 0, 293, 236
@@ -1461,13 +1463,15 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_STATIC1,"Static",SS_OWNERDRAW | SS_NOTIFY,7,7,212,190
     CONTROL         "Used color",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,10,49,10
-    PUSHBUTTON      "&Edit color",IDC_BUTTONEDITCOLOR,236,38,50,14
+    PUSHBUTTON      "&Edit color",IDC_BUTTONEDITCOLOR,224,38,62,14
     EDITTEXT        IDC_EDIT1,7,200,212,29,ES_MULTILINE | ES_READONLY
-    PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,236,215,50,14
-    PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,236,198,50,14
+    PUSHBUTTON      "E&xport",IDC_BUTTON_SAVE,224,197,62,14
+    PUSHBUTTON      "&Import",IDC_BUTTON_LOAD,224,159,62,14
     CONTROL         "Fixed",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,23,33,10
-    EDITTEXT        IDC_EDITRANGE,232,77,54,67,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,236,56,50,14
+    EDITTEXT        IDC_EDITRANGE,224,77,62,76,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,224,56,62,14
+    PUSHBUTTON      "Export &range",IDC_BUTTON_SAVERANGE,224,215,60,14
+    PUSHBUTTON      "Import &at",IDC_BUTTON_LOADAT,224,178,62,14
 END
 
 IDD_DECOMPILER DIALOGEX 0, 0, 607, 303
@@ -2060,6 +2064,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 286
+        VERTGUIDE, 226
         TOPMARGIN, 7
         BOTTOMMARGIN, 229
     END
@@ -2068,6 +2073,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 286
+        VERTGUIDE, 224
         TOPMARGIN, 7
         BOTTOMMARGIN, 229
     END
