- view details and icon view toolbar buttons were missing - bring back package specification when saving resource (for SCI1 and below)

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -740,15 +740,17 @@ BEGIN
     CONTROL         "Use random patterns",IDC_USERANDOMPATTERNS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,79,84,10
 END
 
-IDD_RESOURCENUM DIALOGEX 0, 0, 131, 55
+IDD_RESOURCENUM DIALOGEX 0, 0, 131, 73
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Save"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "Resource number:",IDC_STATIC2,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,10,61,10,WS_EX_RIGHT
-    EDITTEXT        IDC_EDITRESOURCE,74,7,50,14,ES_AUTOHSCROLL | ES_NUMBER
-    DEFPUSHBUTTON   "OK",IDOK,7,34,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,74,34,50,14
+    CONTROL         "Resource number:",IDC_STATIC2,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,32,61,10,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITRESOURCE,74,29,50,14,ES_AUTOHSCROLL | ES_NUMBER
+    DEFPUSHBUTTON   "OK",IDOK,7,52,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,74,52,50,14
+    CONTROL         "Package number:",IDC_STATIC1,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,11,61,10,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITPACKAGE,74,8,50,14,ES_AUTOHSCROLL | ES_NUMBER
 END
 
 IDD_PREFERENCES DIALOGEX 0, 0, 354, 142
@@ -1648,7 +1650,7 @@ BEGIN
         RIGHTMARGIN, 124
         VERTGUIDE, 74
         TOPMARGIN, 7
-        BOTTOMMARGIN, 48
+        BOTTOMMARGIN, 66
     END
 
     IDD_PREFERENCES, DIALOG
