- mark allTrue as taking a selector - prep work for SCI1 sound support

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -57,6 +57,7 @@ signal = "signalType"
 [methodParameterTypes]
 doVerb = [ "verbType" ]
 firstTrue = [ "selector" ]
+allTrue = [ "selector" ]
 respondsTo = [ "selector" ]
 eachElementDo = [ "selector" ]
 
