- support scalable flag for views

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1158,9 +1158,10 @@ BEGIN
     COMBOBOX        IDC_COMBO_MIRROR,49,211,46,200,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "Loop",IDC_STATIC_LOOPGROUP,3,169,96,59
     CONTROL         "Affect all cels in loop",IDC_CHECKAPPLYTOALL,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,3,232,96,11
-    CONTROL         "",IDC_TREELOOPS,"SysTreeView32",TVS_SHOWSELALWAYS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,3,248,96,75
+    CONTROL         "",IDC_TREELOOPS,"SysTreeView32",TVS_SHOWSELALWAYS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,3,259,96,64
     LTEXT           "Palette:",IDC_STATIC7,3,52,33,10
     COMBOBOX        IDC_COMBO_PALETTE,3,61,33,200,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Is scalable",IDC_CHECKISSCALABLE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,3,246,96,11
 END
 
 IDD_PICCOMMANDS DIALOGEX 0, 0, 117, 277
