- support for extended char sets in fonts

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1087,7 +1087,7 @@ BEGIN
     COMBOBOX        IDC_COMBOTEMPLATE,56,48,76,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_DIALOGCELFONT2 DIALOGEX 0, 0, 102, 203
+IDD_DIALOGCELFONT2 DIALOGEX 0, 0, 102, 219
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
@@ -1102,12 +1102,14 @@ BEGIN
     LTEXT           "x",IDC_STATIC5,59,72,8,8,0,WS_EX_RIGHT
     EDITTEXT        IDC_EDIT_CELHEIGHT,67,65,22,14,ES_AUTOHSCROLL | ES_NUMBER
     GROUPBOX        "Cel",IDC_STATIC_CELGROUP,3,56,96,28
-    LTEXT           "Line height:",IDC_STATIC3,20,90,38,8
-    EDITTEXT        IDC_EDIT_LINEHEIGHT,65,87,30,14,ES_AUTOHSCROLL
-    LTEXT           "Preview text:",IDC_STATIC4,3,105,44,8
-    EDITTEXT        IDC_EDIT_SAMPLE,3,115,96,43,ES_MULTILINE | ES_WANTRETURN
-    CONTROL         "Affect all characters",IDC_CHECKAPPLYTOALL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,163,96,10
-    PUSHBUTTON      "Use Windows font",ID_MAKEFONT,18,182,81,14
+    LTEXT           "Line height:",IDC_STATIC3,22,90,38,8
+    EDITTEXT        IDC_EDIT_LINEHEIGHT,65,87,29,14,ES_AUTOHSCROLL
+    LTEXT           "Preview text:",IDC_STATIC4,3,125,44,8
+    EDITTEXT        IDC_EDIT_SAMPLE,3,135,96,43,ES_MULTILINE | ES_WANTRETURN
+    CONTROL         "Affect all characters",IDC_CHECKAPPLYTOALL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,3,183,96,10
+    PUSHBUTTON      "Use Windows font",ID_MAKEFONT,3,198,96,14
+    EDITTEXT        IDC_EDITNUMCHARS,65,106,29,14,ES_AUTOHSCROLL | ES_NUMBER
+    RTEXT           "Char count:",IDC_STATIC8,18,108,39,8
 END
 
 IDD_DIALOGCELCURSOR2 DIALOGEX 0, 0, 102, 124
@@ -1862,8 +1864,9 @@ BEGIN
         VERTGUIDE, 36
         VERTGUIDE, 39
         VERTGUIDE, 65
+        VERTGUIDE, 94
         TOPMARGIN, 7
-        BOTTOMMARGIN, 196
+        BOTTOMMARGIN, 212
         HORZGUIDE, 129
     END
 
