- support for previewing palette while editing - support for palette cycling preview

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1446,14 +1446,14 @@ BEGIN
     CONTROL         "&Disassemble scripts",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,60,70,77,10
 END
 
-IDD_PALETTE_EDITOR DIALOGEX 0, 0, 293, 236
+IDD_PALETTE_EDITOR DIALOGEX 0, 0, 293, 255
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "VGA Palette Editor"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Close",IDCANCEL,226,215,60,14
+    PUSHBUTTON      "Close",IDCANCEL,226,234,60,14
     CONTROL         "",IDC_STATIC1,"Static",SS_OWNERDRAW | SS_NOTIFY,7,7,212,190
-    PUSHBUTTON      "Revert",IDC_BUTTONREVERT,226,198,60,14
+    PUSHBUTTON      "Revert",IDC_BUTTONREVERT,226,217,60,14
     CONTROL         "Used color",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,232,10,49,10
     PUSHBUTTON      "&Edit color",IDC_BUTTONEDITCOLOR,226,38,60,14
     EDITTEXT        IDC_EDIT1,7,200,212,29,ES_MULTILINE | ES_READONLY
@@ -1464,6 +1464,9 @@ BEGIN
     PUSHBUTTON      "&Gradient",IDC_BUTTONRANGEGRADIENT,226,56,60,14
     PUSHBUTTON      "Import &at",IDC_BUTTON_LOADAT,226,147,60,14
     PUSHBUTTON      "Export &range",IDC_BUTTON_SAVERANGE,226,181,60,14
+    CONTROL         "Preview palette cycling",IDC_CHECKPREVIEWCYCLING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,117,233,100,10
+    CONTROL         "<-",IDC_BUTTONCYCLELEFT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,64,231,19,15
+    CONTROL         "->",IDC_BUTTONCYCLERIGHT,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE,88,230,20,16
 END
 
 IDD_PALETTE_EDITOR_EMBEDDED DIALOGEX 0, 0, 293, 236
@@ -2077,7 +2080,7 @@ BEGIN
         RIGHTMARGIN, 286
         VERTGUIDE, 226
         TOPMARGIN, 7
-        BOTTOMMARGIN, 229
+        BOTTOMMARGIN, 248
     END
 
     IDD_PALETTE_EDITOR_EMBEDDED, DIALOG
