--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -708,7 +708,7 @@ CAPTION "About SCICompanion"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC4,11,17,21,20
-    LTEXT           "SCICompanion Version 3.0.0.1",IDC_STATIC1,50,7,119,8,SS_NOPREFIX
+    LTEXT           "SCICompanion Version 3.0.0.2",IDC_STATIC1,50,7,119,8,SS_NOPREFIX
     LTEXT           "Copyright (C) 2015",IDC_STATIC2,50,25,119,8
     DEFPUSHBUTTON   "OK",IDOK,208,7,50,16,BS_FLAT | WS_GROUP
     LTEXT           "By Phil Fortier (IceFall Games)\n\n\nParts of code (""Crystal Edit"" text editor) by Andrei Stcherbatchenko\n\nContains decompression routines from the ScummVM project.\n\ncppformat library  Copyright (c) 2012 - 2015, Victor Zverovich",IDC_STATIC3,50,48,189,115
@@ -1174,20 +1174,21 @@ BEGIN
     PUSHBUTTON      "Crop",ID_CROPCOMMANDS,44,25,30,14
     LISTBOX         IDC_LISTCOMMANDS,7,44,103,226,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Copy",ID_EDIT_COPY,78,25,32,14
-    PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14
+    PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_RIGHT
 END
 
 IDD_PICCOMMANDS_VGA DIALOGEX 0, 0, 117, 277
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Delete",ID_EDIT_DELETE,7,25,34,14
-    PUSHBUTTON      "Crop",ID_CROPCOMMANDS,44,25,30,14
-    LISTBOX         IDC_LISTCOMMANDS,7,44,103,115,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "Delete",ID_EDIT_DELETE,7,42,34,14
+    PUSHBUTTON      "Crop",ID_CROPCOMMANDS,44,42,30,14
+    LISTBOX         IDC_LISTCOMMANDS,7,60,103,99,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
     CONTROL         "",IDC_STATIC2,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,7,178,103,87
-    PUSHBUTTON      "Copy",ID_EDIT_COPY,78,25,32,14
-    PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14
+    PUSHBUTTON      "Copy",ID_EDIT_COPY,78,42,32,14
+    PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_RIGHT
     PUSHBUTTON      "Edit",ID_PIC_EDITPALETTE,7,162,19,14,BS_ICON | BS_FLAT
+    PUSHBUTTON      "Set background",ID_EDIT_PASTEINTOPIC,44,25,66,14
 END
 
 IDD_DIALOGEMPTY DIALOGEX 0, 0, 129, 221
@@ -1598,12 +1599,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "IceFall Games"
             VALUE "FileDescription", "SCICompanion"
-            VALUE "FileVersion", "3.0.0.1"
+            VALUE "FileVersion", "3.0.0.2"
             VALUE "InternalName", "SCICompanion.exe"
             VALUE "LegalCopyright", "(c) IceFall Games.  All rights reserved."
             VALUE "OriginalFilename", "SCICompanion.exe"
             VALUE "ProductName", "SCI Companion 3"
-            VALUE "ProductVersion", "3.0.0.1"
+            VALUE "ProductVersion", "3.0.0.2"
         END
     END
     BLOCK "VarFileInfo"
@@ -1908,6 +1909,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 110
+        VERTGUIDE, 44
         TOPMARGIN, 7
         BOTTOMMARGIN, 270
     END
